--- a/app/scss/main-style.scss
+++ b/app/scss/main-style.scss
@@ -7,6 +7,7 @@
 	"global/_flexbox-mixin",
 	"global/_flexbox-column_grid",
 	"global/_flexbox-block_grid",
+	"global/_global",
 
 	"elements/_body",
 	"elements/_typographic",
@@ -22,7 +23,6 @@
 	"components/_page-banner",
 
 	"layouts/_header",
-	"layouts/_navigation",
 	"layouts/_content",
 	"layouts/_footer-callout",
 	"layouts/_footer",
